# SDL

./: CMakeLists.txt  README.md  main.cpp
chess/: CMakeLists.txt  chess.cpp  chess.h
lib/SDL2/cmake/: sdl2-config-version.cmake  sdl2-config.cmake
tutorials/01_helloSDL/: helloSDL.cpp  helloSDL.h
tutorials/02_drawImage/: drawImageSDL.cpp  drawImageSDL.h
tutorials/03_eventDrivenProgramming/: eventDriven.cpp  eventDriven.h
tutorials/04_keyPresses/: keyPress.cpp  keyPress.h
tutorials/05_optimizedSurfaceLoadingAndSoftStreching/: optimizedLoading.cpp  optimizedLoading.h
tutorials/drawImage/: drawImageSDL.cpp  drawImageSDL.h
tutorials/eventDrivenProgramming/: eventDriven.cpp  eventDriven.h
tutorials/helloSDL/: helloSDL.cpp
